# Industrial-Backend

./: .env  Cargo.toml  README.md
database/: docker-compose.yml  init.sql
src/: app.rs  config.rs  lib.rs  main.rs
src/models/: mod.rs
src/models/entities/: cities.rs  mod.rs  people.rs
src/models/requests/: birthdays.rs  cities.rs  mod.rs  people.rs
src/models/responses/: birthday.rs  cities.rs  mod.rs  people.rs
src/routes/: birthdays.rs  cities.rs  mod.rs  users.rs
src/schema/: mod.rs
src/services/: cities.rs  mod.rs  people.rs
