[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
bigdecimal = { version = "0.4.8", features = ["serde"] }

